--- a/about.html
+++ b/about.html
@@ -3,26 +3,24 @@
   <head>
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="styleguide.css" />
-    <link rel="stylesheet" href="style-about.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="about-page">
 
-
       <div id="nav-holder" > </div>
-
 
       <div class="header-section">
         <div class="header-content">
           <div class="title-subtitle">
             <div class="text-wrapper-2">Branding | Image making</div>
             <div class="text-wrapper-3">Visual Designer</div>
-            <p class="this-is-a-template">
+            <p class="text-wrapper-4">
               This is a template Figma file, turned into code using Anima. <br />Learn more at AnimaApp.com
             </p>
           </div>
           <a href="https://www.animaapp.com" target="_blank" rel="noopener noreferrer"
-            ><div class="button"><div class="text-wrapper-4">Contact</div></div></a
+            ><div class="button"><div class="text-wrapper-5">Contact</div></div></a
           >
         </div>
         <img class="headerimage" src="img/headerimage-1-1.png" />
